<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vymajoris.roboq.MainActivity"
    >

    <TextView
        android:id="@+id/estbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"

        android:text="@string/estbTitle"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/queueSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/estbTitle"

        android:text="@string/queueSize"
        app:layout_constraintRight_toRightOf="@+id/queuePos"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/ticketBtn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"

        android:text="@string/ticketBtn"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/estbTitle"
        tools:layout_editor_absoluteX="0dp"
        android:enabled="false"/>

    <TextView
        android:id="@+id/ticketRetrieved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketRetrieved"


        android:elevation="1dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/ticketBtn"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/queuePos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/queuePos"
        tools:text="@string/queuePos"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estbTitle"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/qrCodeImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:cropToPadding="true"
        app:srcCompat="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintTop_toBottomOf="@+id/qrCodeAuthText"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/qrCodeAuthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/qrCodeAuthText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/qrCodeAuthText"
        app:layout_constraintTop_toBottomOf="@+id/ticketRetrieved"
        android:visibility="invisible"/>


</android.support.constraint.ConstraintLayout>
